--- a/index.html
+++ b/index.html
@@ -25,13 +25,21 @@
       }
       .key{
         border: 2px solid;
+        height: 30px;
+        width: 300px;
+        text-align: center;
+        color:white;
+        font-size: 16px;
+        background-color: black;
       }
     </style>
   </head>
   <body style="background-color: gray">
     <div class="project">
       <div class="insert" id="insert">
-        <div class="key">Press the KeyBoard key and watch magic</div>
+        <div><input class="key" type="text"placeholder="Press the KeyBoard key and watch magic">
+        
+        </div>
       </div>
     </div>
   </body>
